--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,9 @@ kotlinpoet = { module = "com.squareup:kotlinpoet", version = "2.1.0" }
 mockk = { module = "io.mockk:mockk", version = "1.13.17" }
 
 [plugins]
-axion-release = { id = "pl.allegro.tech.build.axion-release", version = "1.18.18" }
 android = { id = "com.android.application", version = "8.9.1" }
 dokka = { id = "org.jetbrains.dokka-javadoc", version = "2.0.0" }
+gitVersion = { id = "io.github.gmazzo.gitversion", version = "1.0.2" }
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.3.1" }
 jacoco-testkit = { id = "io.github.gmazzo.gradle.testkit.jacoco", version = "1.0.3" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
